--- a/moozer-frontend/package.json
+++ b/moozer-frontend/package.json
@@ -15,16 +15,22 @@
 		"@tabler/icons-react": "^3.30.0",
 		"better-auth": "^1.1.21",
 		"card3d": "^2.6.5",
+		"chart.js": "^4.4.8",
+		"chartjs-adapter-date-fns": "^3.0.0",
+		"chartjs-plugin-zoom": "^2.2.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"daisyui": "^4.4.19",
 		"framer-motion": "^12.4.7",
 		"js-cookie": "^3.0.5",
+		"leaflet": "^1.9.4",
 		"lucide-react": "^0.294.0",
+		"nanoid": "^5.1.2",
 		"react": "^18.2.0",
 		"react-daisyui": "^5.0.0",
 		"react-dom": "^18.3.1",
 		"react-icons": "^5.5.0",
+		"react-leaflet": "^4.2.1",
 		"react-router": "^7.2.0",
 		"react-router-dom": "^7.2.0",
 		"swiper": "^11.0.6",
@@ -34,6 +40,7 @@
 	},
 	"devDependencies": {
 		"@types/js-cookie": "^3.0.6",
+		"@types/leaflet": "^1.9.16",
 		"@types/react": "^18.2.43",
 		"@types/react-dom": "^18.2.17",
 		"@typescript-eslint/eslint-plugin": "^6.14.0",
